force-app/main/default/objects/Resumo_analise_manual_oportunidade__c/Resumo_analise_manual_oportunidade__c.object-meta.xml
<CustomObject>
    <description>Objeto criado para receber os dados dos processos de aprovação finalizados, seja com recall, negação ou aprovação. A partir deste objeto é gerado o relatório de processos de aprovação.</description>
    <label>Resumo análise manual oportunidade</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Linha de resumo análise manual oportunid</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resumos análise manual oportunidade</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>