force-app/main/default/objects/Resumo_analise_manual_oportunidade__c/fields/Aprovador__c.field-meta.xml
<CustomField>
    <fullName>Aprovador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contêm o aprovador desta etapa do processo.</description>
    <label>Usuário</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resumos_an_lise_manual_oport_aprovador</relationshipName>
    <type>Lookup</type>
</CustomField>