force-app/main/default/objects/Resumo_analise_manual_oportunidade__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <description>Oportunidade que gerou este processo de aprovação.</description>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Resumos análise manual oportunidade</relationshipLabel>
    <relationshipName>Resumos_an_lise_manual_oportunidade</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>