force-app/main/default/objects/Resumo_analise_manual_oportunidade__c/fields/Resultado_analise_automatica__c.field-meta.xml
<CustomField>
    <fullName>Resultado_analise_automatica__c</fullName>
    <description>Contêm o resultado da análise automática de crédito (análise do gestor).</description>
    <label>Resultado análise automática</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>