force-app/main/default/objects/Resumo_analise_manual_oportunidade__c/fields/Resultado_do_processo__c.field-meta.xml
<CustomField>
    <fullName>Resultado_do_processo__c</fullName>
    <description>Resultado final do processo de aprovação.</description>
    <label>Resultado do processo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>