force-app/main/default/objects/Resumo_analise_manual_oportunidade__c/fields/T_rmino_do_processo_em__c.field-meta.xml
<CustomField>
    <fullName>T_rmino_do_processo_em__c</fullName>
    <description>Data e hora em que a oportunidade foi aprovada ou rejeitada.</description>
    <label>Término do processo em</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>